[project]
name = "task_tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tasks-cli = "task_tracker.cli:main"

[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_tracker"]
